Fix toString not matching the implicit stringifier for <a>.

Fixes problem with Flash for Linux download page. Ultimately, we probably
want DOMObject::toString gone and everything done via toString, but that'd
be cleaner in WebIDL land.

BUG: 273941